--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -76,7 +76,7 @@
   --ion-color-light-tint: #f5f6f9;
 }
 
-@media (prefers-color-scheme: dark) {
+// @media (prefers-color-scheme: dark) {
   /*
    * Dark Colors
    * -------------------------------------------
@@ -226,4 +226,4 @@
   ion-title.title-large {
     --color: white;
   }
-}
+// }
