--- a/src/app/tabs/movements/new-movement/new-movement.page.html
+++ b/src/app/tabs/movements/new-movement/new-movement.page.html
@@ -12,18 +12,21 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <form [formGroup]="form">
-    <!-- <ion-grid>
+<ion-content class="ion-padding">
+    <ion-grid>
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
           <ion-item>
-            <ion-label position="floating">Title</ion-label>
-            <ion-input type="text" autocomplete autocorrect formControlName="title"></ion-input>
+            <ion-label>Tipo de transacción</ion-label>
+            <ion-select value="EGRESO">
+              <ion-select-option value="EGRESO">Gasto</ion-select-option>
+              <ion-select-option value="INGRESO">Ingreso</ion-select-option>
+              <ion-select-option value="INTERCUENTA">Entre cuentas</ion-select-option>
+            </ion-select>
           </ion-item>
         </ion-col>
       </ion-row>
-      <ion-row>
+      <!-- <ion-row>
         <ion-col size-sm="6" offset-sm="3">
           <ion-item>
             <ion-label position="floating">Description</ion-label>
@@ -57,7 +60,7 @@
             <ion-datetime min="2020-01-02" max="2024-12-31" formControlName="dateTo"></ion-datetime>
           </ion-item>
         </ion-col>
-      </ion-row>
-    </ion-grid> -->
-  </form>
+      </ion-row> -->
+    </ion-grid>
+    <app-expense-form></app-expense-form>
 </ion-content>
