--- a/src/app/tabs/movements/new-movement/new-movement.page.html
+++ b/src/app/tabs/movements/new-movement/new-movement.page.html
@@ -26,41 +26,7 @@
           </ion-item>
         </ion-col>
       </ion-row>
-      <!-- <ion-row>
-        <ion-col size-sm="6" offset-sm="3">
-          <ion-item>
-            <ion-label position="floating">Description</ion-label>
-            <ion-textarea rows="3" formControlName="description"></ion-textarea>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-row *ngIf="!form.get('description').valid && form.get('description').touched">
-        <ion-col size-sm="6" offset-sm="3">
-          <ion-label>Description should be between 1 and 180 characters.</ion-label>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size-sm="6" offset-sm="3">
-          <ion-item>
-            <ion-label position="floating">Price</ion-label>
-            <ion-input type="number" formControlName="price"></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size-sm="3" offset-sm="3">
-          <ion-item>
-            <ion-label position="floating">Available from</ion-label>
-            <ion-datetime min="2020-01-01" max="2024-12-31" formControlName="dateFrom"></ion-datetime>
-          </ion-item>
-        </ion-col>
-        <ion-col size-sm="3">
-          <ion-item>
-            <ion-label position="floating">Available to</ion-label>
-            <ion-datetime min="2020-01-02" max="2024-12-31" formControlName="dateTo"></ion-datetime>
-          </ion-item>
-        </ion-col>
-      </ion-row> -->
     </ion-grid>
-    <app-expense-form></app-expense-form>
+    <!-- <app-expense-form></app-expense-form> -->
+    <app-income-form></app-income-form>
 </ion-content>
