--- a/src/app/tabs/movements/new-movement/new-movement.page.html
+++ b/src/app/tabs/movements/new-movement/new-movement.page.html
@@ -18,7 +18,7 @@
         <ion-col size-sm="6" offset-sm="3">
           <ion-item>
             <ion-label>Tipo de transacción</ion-label>
-            <ion-select value="EGRESO">
+            <ion-select (ionChange)="loadForm($event)">
               <ion-select-option value="EGRESO">Gasto</ion-select-option>
               <ion-select-option value="INGRESO">Ingreso</ion-select-option>
               <ion-select-option value="INTERCUENTA">Entre cuentas</ion-select-option>
@@ -28,5 +28,6 @@
       </ion-row>
     </ion-grid>
     <!-- <app-expense-form></app-expense-form> -->
-    <app-income-form></app-income-form>
+    <!-- <app-income-form></app-income-form> -->
+    <ng-template #movementFormContainer></ng-template>
 </ion-content>
