--- a/src/app/tabs/movements/new-movement/forms/expense-form/expense-form.component.html
+++ b/src/app/tabs/movements/new-movement/forms/expense-form/expense-form.component.html
@@ -6,6 +6,7 @@
           <ion-label>Fecha</ion-label>
           <ion-datetime
             displayFormat="DD MM YY"
+            formControlName="date"
             value="new Date()"
           ></ion-datetime>
         </ion-item>
