--- a/src/app/tabs/movements/new-movement/forms/exchange-form/exchange-form.component.html
+++ b/src/app/tabs/movements/new-movement/forms/exchange-form/exchange-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="exchangeForm">
+<form [formGroup]="form">
   <ion-grid>
     <ion-row>
       <ion-col size-sm="6" offset-sm="3">
