--- a/src/app/tabs/accounts/accounts.page.html
+++ b/src/app/tabs/accounts/accounts.page.html
@@ -1,9 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>accounts</ion-title>
+    <ion-title>Cuentas</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  Coming Soon
+  <ion-list>
+    <ion-item *ngFor="let account of accounts">
+      <ion-label>{{ account.name }} - {{ account.balance | currency }}</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
