--- a/src/app/tabs/accounts/accounts.page.html
+++ b/src/app/tabs/accounts/accounts.page.html
@@ -7,7 +7,7 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let account of accounts">
-      <ion-label>{{ account.name }} - {{ account.balance | currency }}</ion-label>
+      <ion-label>{{ account.name }} ({{ account.balance | currency }})</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
