--- a/src/app/tabs/accounts/accounts.page.html
+++ b/src/app/tabs/accounts/accounts.page.html
@@ -7,6 +7,9 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let account of accounts">
+      <ion-icon
+        [name]="getIcon(account)"
+        slot="start"></ion-icon>
       <ion-label>{{ account.name }} ({{ account.balance | currency }})</ion-label>
     </ion-item>
   </ion-list>
