--- a/src/app/tabs/accounts/accounts.page.html
+++ b/src/app/tabs/accounts/accounts.page.html
@@ -1,6 +1,14 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Cuentas</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button routerLink="new">
+        <ion-icon name="add" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
