--- a/src/app/tabs/accounts/new-account/new-account.page.html
+++ b/src/app/tabs/accounts/new-account/new-account.page.html
@@ -1,9 +1,56 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>new-account</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/tabs/accounts"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Nueva Cuenta</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button (click)="onConfirm()" [disabled]="!form.valid">
+        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content class="ion-padding">
+  <form [formGroup]="form">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label>Tipo</ion-label>
+            <ion-select formControlName="type">
+              <ion-select-option value="EFECTIVO">Efectivo</ion-select-option>
+              <ion-select-option value="CUENTA">Cuenta Bancaria</ion-select-option>
+              <ion-select-option value="CREDITO">Tarjeta de Crédito</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Nombre</ion-label>
+            <ion-input
+              formControlName="name"
+              type="text"
+              inputmode="text"
+            ></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Saldo Inicial</ion-label>
+            <ion-input
+              formControlName="startingBalance"
+              type="number"
+              inputmode="decimal"
+            ></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
