--- a/src/app/tabs/accounts/new-account/new-account.page.html
+++ b/src/app/tabs/accounts/new-account/new-account.page.html
@@ -44,7 +44,7 @@
           <ion-item>
             <ion-label position="floating">Saldo Inicial</ion-label>
             <ion-input
-              formControlName="startingBalance"
+              formControlName="balance"
               type="number"
               inputmode="decimal"
             ></ion-input>
