--- a/src/app/tabs/movements/movement-item/movement-item.component.html
+++ b/src/app/tabs/movements/movement-item/movement-item.component.html
@@ -1,9 +1,17 @@
 <ion-item>
   <ion-icon
-    [name]="icon"
+    [name]="icon.name"
     slot="start"
-    [class]="class"
+    [class]="icon.class"
   ></ion-icon>
-  <ion-label>{{ movement.amount | currency }} - {{ movement.description }}</ion-label>
+  <ion-label class="ion-text-wrap">
+    <ion-text>
+      {{ movement.amount | currency }} - {{ movement.description }}
+    </ion-text>
+    <!-- <ion-text *ngIf="movement.account">
+      account
+      {{ (movement.account | doc | async).name }}
+    </ion-text> -->
+  </ion-label>
   <ion-note slot="end">{{ movement.date | date: 'dd/MM/yy' }}</ion-note>
 </ion-item>
