--- a/src/app/tabs/movements/new-movement/forms/income-form/income-form.component.html
+++ b/src/app/tabs/movements/new-movement/forms/income-form/income-form.component.html
@@ -53,9 +53,7 @@
         <ion-item>
           <ion-label>Cuenta</ion-label>
           <ion-select formControlName="account">
-            <ion-select-option value="1">TDD Bancomer</ion-select-option>
-            <ion-select-option value="2">TDD Banamex</ion-select-option>
-            <ion-select-option value="3">Efectivo</ion-select-option>
+            <ion-select-option *ngFor="let account of accounts | async" [value]="account.id">{{ account.name }}</ion-select-option>
           </ion-select>
         </ion-item>
       </ion-col>
