--- a/src/app/tabs/configuration/configuration.page.html
+++ b/src/app/tabs/configuration/configuration.page.html
@@ -1,9 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>configuration</ion-title>
+    <ion-title>Configuración</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  Coming Soon
+  <ion-list>
+    <ion-item button detail (click)="navigateTo('expense-categories')">
+      Categorías de gasto
+    </ion-item>
+  </ion-list>
 </ion-content>
