Create income sources page

--- a/src/app/tabs/configuration/configuration.page.html
+++ b/src/app/tabs/configuration/configuration.page.html
@@ -7,7 +7,10 @@
 <ion-content>
   <ion-list>
     <ion-item button detail (click)="navigateTo('expense-categories')">
-      Categorías de gasto
+      Plan de gastos
+    </ion-item>
+    <ion-item button detail (click)="navigateTo('income-sources')">
+      Plan de ingresos
     </ion-item>
   </ion-list>
 </ion-content>
