--- a/src/app/income-sources/income-sources.page.html
+++ b/src/app/income-sources/income-sources.page.html
@@ -9,18 +9,18 @@
 
 <ion-content>
   <ion-list>
-    <!-- <form [formGroup]="form">
+    <form [formGroup]="form">
       <ion-grid class="ion-no-padding">
         <ion-row>
           <ion-col size="5">
             <ion-item>
-              <ion-input type="text" placeholder="Nueva categoría" formControlName="name"></ion-input>
+              <ion-input type="text" placeholder="Nueva fuente" formControlName="name"></ion-input>
             </ion-item>
           </ion-col>
           <ion-col size="5">
             <ion-item
               >$
-              <ion-input type="number" placeholder="1000.00" formControlName="plannedExpense"></ion-input>
+              <ion-input type="number" placeholder="1000.00" formControlName="plannedIncome"></ion-input>
             </ion-item>
           </ion-col>
           <ion-col size="2" class="ion-align-items-end">
@@ -41,12 +41,12 @@
           </ion-col>
         </ion-row>
       </ion-grid>
-    </form> -->
+    </form>
     <ion-item *ngFor="let source of sources">
       <ion-label>{{ source.name }}</ion-label>
-      <!-- <ion-label class="ion-text-end"
-        >{{ category.plannedExpense | currency }}</ion-label
-      > -->
+      <ion-label class="ion-text-end"
+        >{{ source.plannedIncome | currency }}</ion-label
+      >
     </ion-item>
   </ion-list>
 </ion-content>
