--- a/src/app/tabs/accounts/accounts.page.html
+++ b/src/app/tabs/accounts/accounts.page.html
@@ -14,15 +14,25 @@
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let account of accounts">
-      <ion-icon
-        [name]="getIcon(account)"
-        slot="start"></ion-icon>
-      <ion-label>{{ account.name }} </ion-label>
-      <ion-label
-        [ngClass]="{ negative: account.balance < 0, positive: account.balance > 0 }">
-        ({{ account.balance | currency }})
-      </ion-label>
-    </ion-item>
+    <ion-item-sliding *ngFor="let account of accounts">
+      <ion-item>
+        <ion-icon [name]="getIcon(account)" slot="start"></ion-icon>
+        <ion-label>{{ account.name }} </ion-label>
+        <ion-label
+          [ngClass]="{ negative: account.balance < 0, positive: account.balance > 0 }"
+        >
+          ({{ account.balance | currency }})
+        </ion-label>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option>
+          <ion-icon slot="icon-only" name="create-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger">
+          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 </ion-content>
