--- a/src/app/expense-categories/expense-categories.page.html
+++ b/src/app/expense-categories/expense-categories.page.html
@@ -14,13 +14,21 @@
         <ion-row>
           <ion-col size="5">
             <ion-item>
-              <ion-input type="text" placeholder="Nueva categoría" formControlName="name"></ion-input>
+              <ion-input
+                type="text"
+                placeholder="Nueva categoría"
+                formControlName="name"
+              ></ion-input>
             </ion-item>
           </ion-col>
           <ion-col size="5">
             <ion-item
               >$
-              <ion-input type="number" placeholder="1000.00" formControlName="plannedExpense"></ion-input>
+              <ion-input
+                type="number"
+                placeholder="1000.00"
+                formControlName="plannedExpense"
+              ></ion-input>
             </ion-item>
           </ion-col>
           <ion-col size="2" class="ion-align-items-end">
@@ -42,11 +50,21 @@
         </ion-row>
       </ion-grid>
     </form>
-    <ion-item *ngFor="let category of categories">
-      <ion-label>{{ category.name }}</ion-label>
-      <ion-label class="ion-text-end"
-        >{{ category.plannedExpense | currency }}</ion-label
-      >
-    </ion-item>
+    <ion-item-sliding *ngFor="let category of categories">
+      <ion-item>
+        <ion-label>{{ category.name }}</ion-label>
+        <ion-label class="ion-text-end"
+          >{{ category.plannedExpense | currency }}</ion-label
+        >
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option>
+          <ion-icon slot="icon-only" name="create-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger" (click)="delete(category.id)">
+          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 </ion-content>
