--- a/src/app/expense-categories/expense-categories.page.html
+++ b/src/app/expense-categories/expense-categories.page.html
@@ -58,7 +58,7 @@
         >
       </ion-item>
       <ion-item-options side="end">
-        <ion-item-option>
+        <ion-item-option disabled>
           <ion-icon slot="icon-only" name="create-outline"></ion-icon>
         </ion-item-option>
         <ion-item-option color="danger" (click)="delete(category.id)">
