--- a/src/app/tabs/movements/movements.page.html
+++ b/src/app/tabs/movements/movements.page.html
@@ -14,6 +14,16 @@
 
 <ion-content>
   <ion-list>
-    <app-movement-item *ngFor="let movement of movements" [movement]="movement"></app-movement-item>
+    <ion-item-sliding *ngFor="let movement of movements">
+      <app-movement-item [movement]="movement"></app-movement-item>
+      <ion-item-options side="end">
+        <ion-item-option disabled>
+          <ion-icon slot="icon-only" name="create-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger" (click)="delete(movement.id)">
+          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 </ion-content>
