--- a/src/app/tabs/reports/reports.page.html
+++ b/src/app/tabs/reports/reports.page.html
@@ -5,5 +5,29 @@
 </ion-header>
 
 <ion-content>
-  Coming Soon
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" offset="3">
+        <form>
+          <ion-select [(ngModel)]="val" [ngModelOptions]="{standalone: true}">
+            <ion-select-option value="1">1</ion-select-option>
+            <ion-select-option value="2">2</ion-select-option>
+          </ion-select>
+        </form>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <div>
+    <div>
+      <div>
+        <canvas baseChart
+          [data]="pieChartData"
+          [labels]="pieChartLabels"
+          [chartType]="pieChartType"
+          [options]="pieChartOptions"
+          [colors]="pieChartColors"
+          [legend]="pieChartLegend"></canvas>
+      </div>
+    </div>
+  </div>
 </ion-content>
