--- a/src/app/tabs/reports/reports.page.html
+++ b/src/app/tabs/reports/reports.page.html
@@ -1,33 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>reports</ion-title>
+    <ion-title>Reportes</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="6" offset="3">
-        <form>
-          <ion-select [(ngModel)]="val" [ngModelOptions]="{standalone: true}">
-            <ion-select-option value="1">1</ion-select-option>
-            <ion-select-option value="2">2</ion-select-option>
-          </ion-select>
-        </form>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  <div>
-    <div>
-      <div>
-        <canvas baseChart
-          [data]="pieChartData"
-          [labels]="pieChartLabels"
-          [chartType]="pieChartType"
-          [options]="pieChartOptions"
-          [colors]="pieChartColors"
-          [legend]="pieChartLegend"></canvas>
-      </div>
-    </div>
-  </div>
+  <app-spent-by-category
+    [categoryList]="categories"
+    [movementList]="movements"></app-spent-by-category>
 </ion-content>
